--- a/style.css
+++ b/style.css
@@ -1,120 +1,335 @@
-* {
+*{
   margin: 0;
-  padding: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  padding:0;
   box-sizing: border-box;
-}
-
-a{
-  color: aliceblue;
   text-decoration: none;
+  outline: none;
+  border: none;
+  font-family: 'Poppins', sans-serif;
 }
-.navbar{
-  background-color: black;
-  position:fixed;
+:root{
+  --bg-color:#081b29;
+  --main-color:#00abf0;
+  --text-color:#333;
+  --second-text-color:#555;
+  --white-color:#fff;
+  --cover-color: linear-gradient(45deg,#00abf0,#006e9a);
+  --page-color: linear-gradient(90deg,#fff,#ddd);
+  --border:.125rem solid #00abf0;
+  --box-shadow: 0 0 .6rem rgba(0,0,0,.2);
+}
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: var(--bg-color);
+}
+.wrapper{
+  position: relative;
+  width: 66rem;
+  height: 45rem;
+  padding: 2rem;
+}
+.cover{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: var(--cover-color);
+  box-shadow: var(--box-shadow);
+  border-top-left-radius: .6rem;
+  border-bottom-left-radius: .6rem;
+  transform-origin: right;
+}
+.cover .cover-left{
+  z-index: -1;
+}
+.cover.cover-right.turn{
+  transform: rotateY(180deg);
+}
+
+.book{
+  position: relative;
   width: 100%;
-  padding: 25px 9%;
+  height: 100%;
   display: flex;
-  justify-content: space-between;
+}
+.book .book-page{
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  background: var(--page-color);
+  box-shadow: 0 0 .6rem rgba(0,0,0,.1);
+  display: flex;
+  padding: 2rem;
+}
+.profile-page{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  z-index: 100;
 }
-.navbar .logo{
-  font-size: 25px;
-  font-weight: 700;
+.image{
+  max-width: 200px;
+  border-radius: 50%;
+  border: .25rem solid var(--main-color);
+  margin-bottom:.8rem ;
 }
-.navbar ul{
-  display: flex;
+.profile-page h1{
+  font-size: 2.7rem;
+  line-height: 1;
 }
-.navbar ul li{
-  list-style: none;
-  margin-left: 35px; ;
+.profile-page h3{
+  font-size: 1.5rem;
+  color: var(--main-color);
 }
-.navbar ul li a{
-  font-size: 20px;
+.profile-page .social-media{
+  margin: .6rem 0 .9rem;
+}
+.profile-page .social-media a{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: transparent;
+  border: var(--border);
+  border-radius: 50%;
+  font-size: 1.3rem;
+  color: var(--main-color);
+  margin: 0 .2rem;
+  transition: .5s;
+}
+.profile-page .social-media a:hover{
+  background: var(--main-color);
+  color: var(--white-color);
+}
+.profile-page p{
+  text-align: justify;
+}
+.btn{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 9.5rem;
+  height: 3rem;
+  background: var(--main-color);
+  border: var(--main-color);
+  border-radius: .3rem;
+  font-size: 1rem;
+  color: var(--white-color);
   font-weight: 500;
-  transition-duration: .5s;
+  margin-top: 11px;
+  margin-right: .4rem;
+  transition: .5s;
 }
-.navbar ul li a:hover,.active{
-  color: yellow;
+.btn-box .btn{
+  background: transparent;
+  color: var(--main-color);
+  border: solid;
 }
-.home{
-  display: flex;
+.btn-box .btn:hover{
+  background: var(--main-color);
+  color: var(--white-color);
+}
+.book-page.page-right{
+  position: absolute;
+  right: 0;
+  transform-style:preserve-3d;
+  transform-origin: left;
+}
+.book-page.page-right.turn{
+  transform: rotateY(-180deg);
+}
+.book-page .page-front,
+.book-page .page-back{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--page-color);
+  padding: 1.5rem 2rem;
+}
+.book-page .page-front{
+  transform: rotateY(0deg) translateZ(1px); 
+}
+.book-page .page-back{
+  transform: rotateY(180deg) translateZ(1px); 
+}
+.title{
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.workeduc-box{
+  border-left: var(--border);
+}
+.workeduc-box .workeduc-content{
+  position: relative;
+  padding-left: 1.6rem;
+  margin-bottom: 1.2rem;
+}
+.workeduc-box .workeduc-content::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -0.65rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  background:var(--main-color) ;
+  border-radius: 50%;
+}
+.workeduc-content .year{
+  color: var(--main-color);
+}
+.workeduc-content .year i{
+  margin-right: .4rem;
+}
+.number-page{
+  position: absolute;
+  bottom: 1.2rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.nextprev-btn{
+  position: absolute;
+  bottom: .9rem;
+  right: 1.5rem;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  font-size: 2rem;
+  color: var(--second-text-color);
+  display: inline-flex;
+  justify-content: center;
   align-items: center;
-  margin-left:150px ;
-  height: 100vh;
-  padding: 60pz 9% 0;
-  color: #fff;
-  filter: drop-shadow(0 0 20px #fff);
+  transition: .5s;
 }
-.home-info h1{
-  font-size: 55px;
-
+.nextprev-btn:hover{
+  color: var(--main-color);
 }
-
-.home-info p{
-  font-size: 16px;
-  margin: 10px 0 25px;
+.nextprev-btn.back{
+  left: 1.5rem;
 }
-.home-info .btn-sci{
+.skills-box{
   display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+.skills-box .skills-content{
+  flex: 1 1 20rem;
+}
+.skills-content h3{
+  font-size: 1.3rem;
+  line-height: 1;
+  margin-bottom: .6rem;
+}
+.skills-content .content{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.skills-content .content span{
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  width: 7rem;
+  height: 8rem;
+  border: var(--border);
+  border-radius: .3rem;
+  font-weight: 600;
+  transition: .3s ease;
 }
-.name{
-  color: yellow;
+.skills-content .content span:hover{
+  box-shadow: var(--box-shadow);
 }
-.container {
-  border-right: 2px solid;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 0;
-  animation: typing 4s steps(30) forwards, blink 0.75s infinite;
+.skills-content .content span i{
+  font-size: 3rem;
+  color: var(--main-color);
 }
-.intro{
-    font-size: 50px;
-    color: yellow;
-  }
-@keyframes typing {
-    from { width: 0; }
-    to { width: 85ch; } 
-  }
-.home-info h2{
-  font-size: 50px;
+.contect-box{
+  text-align: center;
 }
-body {
-  margin: 0;
-  height: 100vh;
-  background: radial-gradient( #4ecdc4 30%, #000 70%);
-  background-size: 200% 200%;
+.contect-box .field{
+  width: 100%;
+  background: transparent;
+  border: var(--border);
+  border-radius: .3rem;
+  padding: .8rem;
+  font-size: 1rem;
+  color:var(--text-color);
+  margin-bottom: 1.5rem;
+}
+.contect-box .field::placeholder{
+  color: var(--text-color);
+}
+.contect-box .textarea{
+  resize: none;
+  height: 15rem;
+}
+.contect-box .btn{
+  cursor: pointer;
+  background-color: var(--main-color);
+  color: white;
+  border:var(--main-color) solid;
+}
+.contect-box .btn:hover{
+  background-color: var(--page-color);
+  color: var(--main-color);
+}
+.Back-profile{
+  position: absolute;
+  bottom: 1.2rem;
+  right: 2rem;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: var(--border);
+  border-radius: .3rem;
+  font-size: 1.1rem;
+  color: var(--main-color);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  transition: .5s;
+}
+.Back-profile:hover{
+  background: var(--main-color);
+  color: var(--white-color);
+}
+.Back-profile p{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%)scale(.5);
+  font-size: 1rem;
+  color: var(--main-color);
+  opacity: 0;
+  transition: .5s;
+}
+.Back-profile:hover p{
+  opacity: 1;
+  transform: translateX(-50%)scale(1);
+  top: -1.8rem;
+}
+.ex{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 400px;
+  padding-bottom: 100px ;
 }
 .about{
-  position: absolute;
-  top: 350px;
-  color: aliceblue;
-  filter: drop-shadow(0 0 50px black);
-
+  display: flex;
+  justify-content: center;
+  text-align: justify;
+  font-size: 20px;
 }
-.about h1 {
- margin-left: 680px;
- margin-top: 650px;
- font-size: 80px;
- color: yellow;
- 
-}
-.about pre{
- margin-left: 233px;
- margin-top: 733px;
- font-size: 30px;
- position: absolute;
- top: 40px;
- text-align: center;
-
-}
-.about pre a{
- color: yellow;
- filter: drop-shadow(0 0 20px yellow)
-}
-
 
 
 
