--- a/style.css
+++ b/style.css
@@ -24,12 +24,25 @@ body{
   align-items: center;
   min-height: 100vh;
   background: var(--bg-color);
+  overflow: hidden;
 }
 .wrapper{
   position: relative;
   width: 66rem;
   height: 45rem;
   padding: 2rem;
+  perspective: 250rem;
+  animation: show-animate 2s forwards;
+}
+@keyframes show-animate {
+  0%,30%{
+    opacity: 0;
+    transform: rotate(-290deg);
+  }
+  100%{
+    opacity: 1;
+    transform: rotate(0deg);
+  }
 }
 .cover{
   position: absolute;
@@ -46,6 +59,10 @@ body{
 .cover .cover-left{
   z-index: -1;
 }
+.cover.cover-right{
+  z-index: 100;
+  transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
 .cover.cover-right.turn{
   transform: rotateY(180deg);
 }
@@ -55,6 +72,7 @@ body{
   width: 100%;
   height: 100%;
   display: flex;
+  perspective: 250rem;
 }
 .book .book-page{
   position: absolute;
@@ -65,6 +83,9 @@ body{
   display: flex;
   padding: 2rem;
 }
+.book-page.page-left{
+  box-shadow: -.6rem .6rem .6rem rgba(0,0,0,.1);
+}
 .profile-page{
   display: flex;
   flex-direction: column;
@@ -72,8 +93,8 @@ body{
   align-items: center;
 }
 .image{
-  max-width: 200px;
-  border-radius: 50%;
+  max-width: 330px;
+  border-radius:50% ;
   border: .25rem solid var(--main-color);
   margin-bottom:.8rem ;
 }
@@ -139,6 +160,7 @@ body{
   right: 0;
   transform-style:preserve-3d;
   transform-origin: left;
+  transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 .book-page.page-right.turn{
   transform: rotateY(-180deg);
@@ -330,18 +352,9 @@ body{
   text-align: justify;
   font-size: 20px;
 }
-
-
-
-
-
-
-
-
-  
-  
-
-
-
-
-
+.img img{
+  width: 400px;
+  padding-left:60px; 
+  padding-top: .2rem;
+  border-radius: 50%;
+}
